test/errors/inner-circular-dependencies-two/packages/library-tracking/index.ts
export * from './src/library.module';
export * from './src/tracking/tracking.service';
